--- a/readme.Rmd
+++ b/readme.Rmd
@@ -2,17 +2,24 @@
 title: "Keskitalo et al Bayesian source apportionment"
 output: github_document
 ---
-```{r, echo = FALSE, warnings = FALSE}
+
+This repository contains the code used for fitting a Bayesian model of smoothly varying source proportions in Keskitalo et al. See `code.R` for R-code and `model.jags` for JAGS model file. Sample run
+
+```{r, warnings = FALSE, message = FALSE, echo = FALSE}
+library(ggplot2, quietly = TRUE, warn.conflicts = FALSE)
+library(dplyr, quietly = TRUE, warn.conflicts = FALSE)
+library(rjags, quietly = TRUE, warn.conflicts = FALSE)
+library(splines, quietly = TRUE)
 source("code.R")
 data<-read.csv("data.csv", sep=";", dec=",", header = FALSE)
 colnames(data) <- c("depth", "D14C", "d13C", "year", "sd")
 ```
 
 
-This repository contains the code used for fitting a Bayesian model of smoothly varying source proportions in Keskitalo et al. See `code.R` for R-code and `model.jags` for JAGS model file. Sample run
-
-```{r, fig.cap = "Posterior interquartile ranges for source fractions"}
+```{r, warnings = FALSE, message = FALSE}
 mcmc_output <- run_jags(file = "model.jags", data = data, N = 1000000, thin = 1000)
 plot_IQR(mcmc_output, data)
 ```
+
+*Fig: Posterior median and interquartile ranges for source proportions *
 
